--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,10 +26,11 @@ jobs:
           NODE_ENV: production
 
       - name: Deploy to server
-        uses: appleboy/scp-action@master
+        uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: dist/sip-house-app
-          target: /www/xn--42-vlceyfhfck.xn--p1ai/
+          script: |
+            pwd
+            rsync -avz --delete /dist/sip-house-app/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/www/xn--42-vlceyfhfck.xn--p1ai/
