--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,4 +32,4 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           password: ${{ secrets.SSH_PASSWORD }}
           script: |
-            rsync -avz --delete /dist/sip-house-app/ ${{ secrets.SSH_USER }}@server277:/www/xn--42-vlceyfhfck.xn--p1ai/
+            rsync -avz --delete /dist/sip-house-app/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/www/xn--42-vlceyfhfck.xn--p1ai/
