--- a/src/assets/projects.json
+++ b/src/assets/projects.json
@@ -1,35 +1,67 @@
 [
   {
-    "id": "project2k",
+    "id": "house-1-level-with-mansard",
     "name": "Проект 2K",
-    "description": "Площадь 120 м² · 2 этажа · терраса",
+    "description": "Площадь 107 м² · 2 этажа · мансарда",
     "price": 4500000,
     "priceDescription": "с фундаментом и отделкой",
-    "pdfFile": "assets/noname_house_2_level_3d.pdf",
+    "pdfUrl": "assets/projects/house-1-level-with-mansard/noname-house-1-level-with-mansard.pdf",
     "images": [
-      "assets/noname_house_2_level_3d.png"
+      {"sort": 7, "url": "assets/projects/house-1-level-with-mansard/back.png", "name": "Вид сзади"},
+      {"sort": 6, "url": "assets/projects/house-1-level-with-mansard/back-left.png", "name": "Вид сзади-слева"},
+      {"sort": 8, "url": "assets/projects/house-1-level-with-mansard/back-right.png", "name": "Вид сзади-справа"},
+      {"sort": 3, "url": "assets/projects/house-1-level-with-mansard/front.png", "name": "Вид спереди"},
+      {"sort": 4, "url": "assets/projects/house-1-level-with-mansard/front-left.png", "name": "Вид спереди-слева", "mainImage": true},
+      {"sort": 10, "url": "assets/projects/house-1-level-with-mansard/front-right.png", "name": "Вид спереди-справа"},
+      {"sort": 5, "url": "assets/projects/house-1-level-with-mansard/left.png", "name": "Вид слева"},
+      {"sort": 1, "url": "assets/projects/house-1-level-with-mansard/level-1.png", "name": "1 этаж"},
+      {"sort": 12, "url": "assets/projects/house-1-level-with-mansard/level-1-3d.png", "name": "Вид 1 этажа"},
+      {"sort": 2, "url": "assets/projects/house-1-level-with-mansard/level-2.png", "name": "2 этаж"},
+      {"sort": 13, "url": "assets/projects/house-1-level-with-mansard/level-2-3d.png", "name": "Вид 2 этажа"},
+      {"sort": 9, "url": "assets/projects/house-1-level-with-mansard/right.png", "name": "Вид справа"},
+      {"sort": 11, "url": "assets/projects/house-1-level-with-mansard/top.png", "name": "Вид сверху"}
     ]
   },
   {
-    "id": "project1k",
-    "name": "Проект 1K",
-    "description": "Площадь 95 м² · 1 этаж · 3 спальни",
+    "id": "house-1-level-42",
+    "name": "Проект 42",
+    "description": "Площадь 50 м² · 1 этаж · 2 спальни",
     "price": 3200000,
     "priceDescription": "под чистовую отделку",
-    "pdfFile": "assets/avangard_project_42_with3d.pdf",
+    "pdfUrl": "assets/projects/house-1-level-42/house-1-level-42.pdf",
     "images": [
-      "assets/avangard_project_42_with3d.png"
+      {"sort": 6, "url": "assets/projects/house-1-level-42/back.png", "name": "Вид сзади"},
+      {"sort": 5, "url": "assets/projects/house-1-level-42/back-left.png", "name": "Вид сзади-слева"},
+      {"sort": 7, "url": "assets/projects/house-1-level-42/back-right.png", "name": "Вид сзади-справа"},
+      {"sort": 2, "url": "assets/projects/house-1-level-42/front.png", "name": "Вид спереди"},
+      {"sort": 3, "url": "assets/projects/house-1-level-42/front-left.png", "name": "Вид спереди-слева", "mainImage": true},
+      {"sort": 9, "url": "assets/projects/house-1-level-42/front-right.png", "name": "Вид спереди-справа"},
+      {"sort": 4, "url": "assets/projects/house-1-level-42/left.png", "name": "Вид слева"},
+      {"sort": 1, "url": "assets/projects/house-1-level-42/level-1.png", "name": "1 этаж"},
+      {"sort": 11, "url": "assets/projects/house-1-level-42/level-1-3d.png", "name": "Вид 1 этажа"},
+      {"sort": 8, "url": "assets/projects/house-1-level-42/right.png", "name": "Вид справа"},
+      {"sort": 10, "url": "assets/projects/house-1-level-42/top.png", "name": "Вид сверху"}
     ]
   },
   {
-    "id": "project05k",
-    "name": "Проект 0.5K",
-    "description": "Площадь 70 м² · 1 этаж · для дачи",
+    "id": "outbuilding-18",
+    "name": "Хозпостройка",
+    "description": "Площадь 18 м² · 1 этаж · для дачи",
     "price": 2400000,
     "priceDescription": "эконом‑решение",
-    "pdfFile": "assets/avangard_house_1-level_3d.pdf",
+    "pdfUrl": "assets/projects/outbuilding-18/outbuilding-18.pdf",
     "images": [
-      "assets/avangard_house_1-level_3d.png"
+      {"sort": 6, "url": "assets/projects/outbuilding-18/back.png", "name": "Вид сзади"},
+      {"sort": 5, "url": "assets/projects/outbuilding-18/back-left.png", "name": "Вид сзади-слева"},
+      {"sort": 7, "url": "assets/projects/outbuilding-18/back-right.png", "name": "Вид сзади-справа"},
+      {"sort": 2, "url": "assets/projects/outbuilding-18/front.png", "name": "Вид спереди"},
+      {"sort": 3, "url": "assets/projects/outbuilding-18/front-left.png", "name": "Вид спереди-слева", "mainImage": true},
+      {"sort": 9, "url": "assets/projects/outbuilding-18/front-right.png", "name": "Вид спереди-справа"},
+      {"sort": 4, "url": "assets/projects/outbuilding-18/left.png", "name": "Вид слева"},
+      {"sort": 1, "url": "assets/projects/outbuilding-18/level-1.png", "name": "1 этаж"},
+      {"sort": 11, "url": "assets/projects/outbuilding-18/level-1-3d.png", "name": "Вид 1 этажа"},
+      {"sort": 8, "url": "assets/projects/outbuilding-18/right.png", "name": "Вид справа"},
+      {"sort": 10, "url": "assets/projects/outbuilding-18/top.png", "name": "Вид сверху"}
     ]
   }
 ]
